--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,10 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	LiquidCrystal_I2C@1.1.4
 	LiquidMenu@1.5.0
 	FastLED@3.3.2
+
 
